{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 44,
  "lineage": "59ad3055-c80b-4d81-dac9-edc803c6781c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "master_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046e3a93c347d61c2",
            "association_id": "eipassoc-0c56c99e29da8c4de",
            "domain": "vpc",
            "id": "eipalloc-046e3a93c347d61c2",
            "instance": "i-045d7846c7208ed57",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-07c95acecc7ee02e9",
            "private_dns": "ip-10-0-1-128.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.128",
            "public_dns": "ec2-18-142-99-167.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.99.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.master",
            "aws_security_group.k8s",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "worker_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0374ac8d1410efdc2",
            "association_id": "eipassoc-0ac2520f8f91730f8",
            "domain": "vpc",
            "id": "eipalloc-0374ac8d1410efdc2",
            "instance": "i-05d7f2c4ba86739e8",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0fb29ada1e72f9cbc",
            "private_dns": "ip-10-0-1-18.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-18-138-109-129.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.138.109.129",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.worker",
            "aws_security_group.k8s",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b571a36bf02461b4",
            "arn": "arn:aws:ec2:ap-southeast-1:255404879889:instance/i-045d7846c7208ed57",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045d7846c7208ed57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07c95acecc7ee02e9",
            "private_dns": "ip-10-0-1-128.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.128",
            "public_dns": "ec2-18-142-99-167.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.99.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0114fb476e203f82a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ffef2ef270e995d",
            "tags": {
              "Name": "k8s-master"
            },
            "tags_all": {
              "Name": "k8s-master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cd6a281cd498db8b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b571a36bf02461b4",
            "arn": "arn:aws:ec2:ap-southeast-1:255404879889:instance/i-05d7f2c4ba86739e8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d7f2c4ba86739e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fb29ada1e72f9cbc",
            "private_dns": "ip-10-0-1-18.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-18-138-109-129.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.138.109.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-069f85930ca67fdc2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ffef2ef270e995d",
            "tags": {
              "Name": "k8s-worker"
            },
            "tags_all": {
              "Name": "k8s-worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cd6a281cd498db8b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255404879889:internet-gateway/igw-072ec2ce15e7d90f7",
            "id": "igw-072ec2ce15e7d90f7",
            "owner_id": "255404879889",
            "tags": {
              "Name": "k8s-demo-igw"
            },
            "tags_all": {
              "Name": "k8s-demo-igw"
            },
            "vpc_id": "vpc-0dd02e04d3aa92a8f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255404879889:route-table/rtb-0c6c8e6eb641ef589",
            "id": "rtb-0c6c8e6eb641ef589",
            "owner_id": "255404879889",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072ec2ce15e7d90f7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-demo-public-rt"
            },
            "tags_all": {
              "Name": "k8s-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd02e04d3aa92a8f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e921c04f9a98efd",
            "route_table_id": "rtb-0c6c8e6eb641ef589",
            "subnet_id": "subnet-07ffef2ef270e995d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255404879889:security-group/sg-0cd6a281cd498db8b",
            "description": "Security group for Kubernetes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd6a281cd498db8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "k8s-demo-sg",
            "name_prefix": "",
            "owner_id": "255404879889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-demo-sg"
            },
            "tags_all": {
              "Name": "k8s-demo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd02e04d3aa92a8f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255404879889:subnet/subnet-07ffef2ef270e995d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ffef2ef270e995d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255404879889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-demo-public-subnet"
            },
            "tags_all": {
              "Name": "k8s-demo-public-subnet"
            },
            "vpc_id": "vpc-0dd02e04d3aa92a8f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255404879889:vpc/vpc-0dd02e04d3aa92a8f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05b6f5bce36c8a662",
            "default_route_table_id": "rtb-01b87576502a56f9a",
            "default_security_group_id": "sg-0056611264e6c1318",
            "dhcp_options_id": "dopt-003922963a9c8c743",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dd02e04d3aa92a8f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b87576502a56f9a",
            "owner_id": "255404879889",
            "tags": {
              "Name": "k8s-demo-vpc"
            },
            "tags_all": {
              "Name": "k8s-demo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}